--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
       table { margin-left: auto; margin-right: auto; }
       td { border: solid 1px grey; width: 100px; height: 100px; text-align: center;
            padding-left: 10px; padding-right: 10px; }
+      #signature { display: block; text-align: right; font-size: 6pt; text-decoration: none;  }
+      #signature a { text-decoration: none; color: black; }
+      #square22 { font-weight: bold; }
     </style>
   </head>
   <body>
+    <div id='signature'><a href="http://nonnegativ.com">nonnegativ</a><br/></div>
     <h1>TIPC Bingo</h1>
     <table id="bingo">
       <tr>
